fix: use pre tag for pre-wrapped content to ensure minifier creates exception

--- a/gavel/static/css/style.scss
+++ b/gavel/static/css/style.scss
@@ -12,6 +12,10 @@ body {
   font-family: Rubik !important;
 }
 
+pre {
+  font-family: Rubik !important;
+}
+
 html {
   font-size: 62.5%;
 }
